k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s18share-api
  namespace: s18share
spec:
  selector:
    app: s18share-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
